Changes since 0.2.8.2:

  New settings:
- TOPOLOGY_POLICE_PARALLEL, extra topology police flag to control the checks 
  for walls getting copied into the grid in exactly the same place.
- CAMERA_GLANCE_*: separate settings for the glancing camera, work like CAMERA_CUSTOM_*.
  Likewise, CAMERA_SERVER_GLANCE_* can replace CAMERA_SERVER_CUSTOM_* when glancing.
  CAMERA_*CUSTOM_GLANCE* are server side settings that can control whether server or
  clientside settings are used in various situations, see settings.cfg for details.
- CYCLE_BOOST_? and CYCLE_BOOSTFACTOR_? for boosts when breaking away from walls,
  see settings.cfg or config.html for details
- CYCLE_ACCEL_TUNNEL, works like CYCLE_ACCEL_SLINGSHOT, but is active when
  none of the two walls you're in between is your own.
- CYCLE_WIDTH for making it impossible to squeeze through tight tunnels,
  see settings.cfg for details
- VOTING_MATURITY controls how long you have to wait after login before
  you can issue kick votes.
- CYCLE_DELAY_DOUBLEBIND_BONUS is an extra factor applied to CYCLE_DELAY
  for turns in the same direction. Can be used to limit the advantage
  doublebinders get while not punishing players who press both left and
  right at the same time.

  Featurelets:
- Nonnormalized axes and axes with odd turning directions are now properly supported
- The camera has a memory which player you like to watch. Every time you manually switch
  the camera and your favorite player is not dead, the favorite is set to the currently 
  watched player. The next time the camera doesn't know what to watch, your favorite
  will be selected.
- Players leaving to spectator mode with <0.2.8.2 clients are handled like
  spectators of 0.2.8.2 clients: they stay visible to the others.
- Kick statistics are now persistent across server runs.
- MESSAGE_OF_DAY is now displayed fullscreen if both server and client support it
- Manual fullscreen messages can be triggered with 
  FULLSCREEN_MESSAGE <timeout> <message content>
