@@ -451,6 +451,7 @@ COLOR_STRINGS 1             # Generate strings that will be rendered with color 
 FILTER_COLOR_STRINGS 0      # Filter color codes from all strings coming in over the network.
 FILTER_COLOR_NAMES 0        # Filter color codes from player names.
 FILTER_NAME_ENDS 1          # Filter whitespace from beginning and end of player names.
+FILTER_NAME_MIDDLE 1        # Filter excess whitespace and other junk from the middle of player names.
 FILTER_COLOR_SERVER_NAMES 0 # Filter color codes from server names in the server browser.
 
 SILENCE_ALL 0      # silence all chat messages?
